Index-page fleshed out

--- a/resources/views/layouts/nomenu.ejs
+++ b/resources/views/layouts/nomenu.ejs
@@ -4,14 +4,14 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="interCOMM ServiceBroker">
-		<meta name="author" content="Visionhall">
+		<meta name="description" content="ScrambleFace">
+		<meta name="author" content="Marian Aldenhövel, Systemgilde Gbr">
 		<link rel="shortcut icon" href="img/favicon.png">
 
 		<link rel="manifest" href="manifest.json">
 
 		<title>
-			CMSServiceBroker <% if (site.version) { %><%= site.version %><% } %>
+			ScrambleFace <% if (site.version) { %><%= site.version %><% } %>
 		</title>
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
