Face detection and tiling

--- a/resources/views/index.ejs
+++ b/resources/views/index.ejs
@@ -34,6 +34,9 @@
                 <input type="file" name="file0" /><br/>
                 <input type="file" name="file1" /><br/>
                 <input type="file" name="file2" /><br/>
+                <input type="file" name="file3" /><br/>
+                <input type="file" name="file4" /><br/>
+                <input type="file" name="file5" /><br/>
                 <input type='submit' value='Submit' />
             </form>
             <h3>GET for download</h3>
